--- a/ApliWebVideoClub_GABINA/ApliWebVideoClub/Site.Master
+++ b/ApliWebVideoClub_GABINA/ApliWebVideoClub/Site.Master
@@ -37,7 +37,7 @@
                          <asp:MenuItem NavigateUrl="~/FormularioFuncionesADM.aspx" Text="Funciones ADMINISTRADOR"/>
                          <asp:MenuItem NavigateUrl="~/FormularioFuncionesSOCIO.aspx" Text="Funciones SOCIO"/>
                          <asp:MenuItem NavigateUrl="~/FormVerPELICULAS.aspx" Text="Catálogo PELICULAS"/>
-                         <asp:MenuItem NavigateUrl="~/Estadisticas.aspx" Text="Estadisticas" />
+                        <asp:MenuItem NavigateUrl="~/MiEstadistica.aspx" Text="ESTADISTICA"/>
                     </Items>
                 </asp:Menu>
             </div>
